@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_SSL_FALSESTART (libcurl 7.42.0+).
+
         * Added CURLOPT_SSL_ENABLE_NPN (libcurl 7.36.0+).
 
         * Added CURLOPT_SSL_ENABLE_ALPN (libcurl 7.36.0+).
